infra/k8s/prod/ingress/ingress-srv-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: recipe
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: recipe.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 3000
          - path: /api/1/recipes/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: recipe-service
                port:
                  number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: recipe-client-service
                port:
                  number: 3000
